Fix grid layout issue when there are too many units in one module. Add visual and code examples.

--- a/components/sass/_grid.scss
+++ b/components/sass/_grid.scss
@@ -1,27 +1,26 @@
 body {
     @include flexContainer(column, nowrap);
-    @include flexAxis(flex-start, center);
+    @include flexAxis(center, center);
     width: 100vw;
-    height: 100vh;
 
     .shell {
         background: $colorBgBody;
         @include flexContainer(column, nowrap);
-        @include flexAxis(flex-start, center);
+        @include flexAxis(center, center);
         @include flexItem(1, 0, auto);
-        width: 100vw;
+        width: 100%;
 
         section {
-            @include flexContainer(row, nowrap);
-            @include flexAxis(center, stretch);
-            width: 100vw;
+            @include flexContainer(column, nowrap);
+            @include flexAxis(flex-start, stretch);
+            width: 100%;
             margin-bottom: 1rem;
 
             .module {
                 @include flexContainer(row, wrap);
                 @include flexItem(1, 1, 100%);
 
-                .unit, .unit-1, .unit-2, .unit-3, .unit-4, .unit-5, .unit-6, .unit-7, .unit-8, .unit-9 {
+                .unit, .unit-1, .unit-2, .unit-3, .unit-4, .unit-5, .unit-6, .unit-7, .unit-8, .unit-9, .unit-10 {
                     @include flexItem(1, 1, 100%);
                     padding: .5rem;
                     box-sizing: border-box;
@@ -37,24 +36,21 @@ body {
     body {
         .shell {
             section {
-
+                @include flexAxis(center, center);
                 .module {
-                    @include flexContainer(row, nowrap);
-                    @include flexAxis(flex-start, center);
+                    @include flexContainer(row, wrap);
+                    @include flexAxis(space-between, center);
                     max-width: $laptop;
+                    width: 100%;
+
 
                     .unit {
-                        margin: 0 .5rem .5rem 0;
-                        @include flexItem(1, 1, 33%);
-
-                        &:first-child {
-                            margin: 0 .5rem .5rem .5rem;
-                        }
+                        @include flexItem(1, 1, auto);
                     }
 
                     .unit-1 {
                         margin: 0 .5rem .5rem 0;
-                        @include flexItem(0, 0, 10%);
+                        @include flexItem(0, 1, 10%);
 
                         &:first-child {
                             margin: 0 .5rem .5rem .5rem;
@@ -63,7 +59,7 @@ body {
 
                     .unit-2 {
                         margin: 0 .5rem .5rem 0;
-                        @include flexItem(0, 0, 20%);
+                        @include flexItem(0, 1, 20%);
 
                         &:first-child {
                             margin: 0 .5rem .5rem .5rem;
@@ -72,7 +68,7 @@ body {
 
                     .unit-3 {
                         margin: 0 .5rem .5rem 0;
-                        @include flexItem(0, 0, 30%);
+                        @include flexItem(0, 1, 30%);
 
                         &:first-child {
                             margin: 0 .5rem .5rem .5rem;
@@ -81,7 +77,7 @@ body {
 
                     .unit-4 {
                         margin: 0 .5rem .5rem 0;
-                        @include flexItem(0, 0, 40%);
+                        @include flexItem(0, 1, 40%);
 
                         &:first-child {
                             margin: 0 .5rem .5rem .5rem;
@@ -90,7 +86,7 @@ body {
 
                     .unit-5 {
                         margin: 0 .5rem .5rem 0;
-                        @include flexItem(0, 0, 50%);
+                        @include flexItem(0, 1, 50%);
                         &:first-child {
                             margin: 0 .5rem .5rem .5rem;
                         }
@@ -98,7 +94,7 @@ body {
 
                     .unit-6 {
                         margin: 0 .5rem .5rem 0;
-                        @include flexItem(0, 0, 60%);
+                        @include flexItem(0, 1, 60%);
 
                         &:first-child {
                             margin: 0 .5rem .5rem .5rem;
@@ -107,7 +103,7 @@ body {
 
                     .unit-7 {
                         margin: 0 .5rem .5rem 0;
-                        @include flexItem(0, 0, 70%);
+                        @include flexItem(0, 1, 70%);
 
                         &:first-child {
                             margin: 0 .5rem .5rem .5rem;
@@ -116,7 +112,7 @@ body {
 
                     .unit-8 {
                         margin: 0 .5rem .5rem 0;
-                        @include flexItem(0, 0, 80%);
+                        @include flexItem(0, 1, 80%);
 
                         &:first-child {
                             margin: 0 .5rem .5rem .5rem;
@@ -125,13 +121,16 @@ body {
 
                     .unit-9 {
                         margin: 0 .5rem .5rem 0;
-                        @include flexItem(0, 0, 90%);
+                        @include flexItem(0, 1, 90%);
 
                         &:first-child {
                             margin: 0 .5rem .5rem .5rem;
                         }
                     }
 
+                    .unit-10 {
+                        @include flexItem(0, 0, 100%);
+                    }
                 }
 
                 .module-center {
